# learninggithub

./: .gitignore  README.md  config.yaml
.bmad-core/: install-manifest.yaml
backend/: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  GITHUB_SETUP.md  README.md  pyproject.toml  railway.json  test_code_analyzer.py  test_github_integration.py  test_qa_api.py
backend/app/: config.py  main.py
backend/app/api/routes/: qa.py  tutorial.py
backend/app/core/: exceptions.py  logging.py
backend/app/middleware/: error_handler.py
backend/app/prompts/: qa_system.txt
backend/app/schemas/: qa.py  tutorial.py
backend/app/services/: ai_generator.py  cache_manager.py  code_analyzer.py  github_client.py  qa_prompt_builder.py  qa_service.py  question_analyzer.py  repository_service.py  session_manager.py
backend/tests/: conftest.py
backend/tests/integration/api/: test_tutorial.py
docs/: architecture.md  deployment-guide.md  iteration-2-plan.md  iteration-2-progress.md  iteration-3-plan.md  iteration-3-summary.md  iteration-4-plan.md  learninggithub-MVP技术方案.md  learninggithub-产品简介.md  learninggithub项目简介.md  prd.md  story-2.1-completion.md  story-2.2-completion.md  story-2.3-completion.md  story-3.1-completion.md  story-3.2-completion.md  story-3.3-completion.md  story-3.3-ux-optimization-plan.md
docs/architecture/: coding-standards.md  source-tree.md  (+1 more)
frontend/: .env.local.example  .env.production.example  .eslintrc.json  .prettierignore  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  vercel.json
(+59 files in other folders)
